--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-<div id="main_cnt_wrapper">
+ <div id="main_cnt_wrapper">
   <div id="yjContentsBody">
     <div class="yjContainer">
       <span class="yjGuid"><a id="yjContentsStart" name="yjContentsStart"></a><img alt="ここから本文です" height="1" src="http://i.yimg.jp/yui/jp/tmpl/1.1.0/audionav.gif" width="1"></span>
@@ -34,6 +34,26 @@
               </ul>
             </div>
           </div>
+          <%= form_for [@product, @review] do |f| %>
+          <div style="margin: 8px 0">
+            <%= f.label :nickname, style: { 'margin-right' => 8 } %>
+            <%= f.text_field :nickname, placeholder: 'nickname', value: '' %>
+          </div>
+          <div style="margin: 8px 0">
+            <%= f.label :評価, style: { 'margin-right' => 8 } %>
+            <%= f.number_field :rate, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } %>
+          </div>
+          <div style="margin: 8px 0">
+            <%= f.text_area :review, placeholder: 'レビューを書いてね！', style: 'width: 100%;height: 300px;' %>
+          </div>
+          <div class="row">
+            <div class="col10 push1">
+              <%= button_tag type: "submit", class: "btn btn--block" do %>
+              投稿する<i class="icon-arrow-right"></i>
+              <% end %>
+            </div>
+          </div>
+          <% end %>
         </article>
       </div>
       <div id="yjSub">
